# playground

./: readme.md
camera-calibration/: CMakeLists.txt  main.cpp  readme.md
camera-calibration/data/mapping/: output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt  output8.txt
camera-calibration/include/: handler.h
camera-calibration/src/: handler.cpp
cb-detector/: CMakeLists.txt  main.cpp  readme.md
cb-detector/include/: handler.h
cb-detector/result/: output.txt
cb-detector/src/: handler.cpp
chessboard/: CMakeLists.txt  main.cpp  readme.md
color-project/: CMakeLists.txt  main.cpp  readme.md
color-project/include/: colorPrj.h
color-project/src/: colorPrj.cpp
corner-from-cb/: CMakeLists.txt  main.cpp  readme.md
corner-from-cb/include/: handler.h
corner-from-cb/result/: img1_mapping.txt  img2_mapping.txt  img3_mapping.txt  img4_mapping.txt
corner-from-cb/src/: handler.cpp
gaussian/: CMakeLists.txt  main.cpp  readme.md
gaussian/pyDrawer/: drawer1.py  drawer2.py  drawer3.py  file1.txt  file2.txt  file3.txt  file4.txt
harris/: CMakeLists.txt  main.cpp  readme.md
harris/src/: harris.cpp
interpolation/: CMakeLists.txt  main.cpp  readme.md
interpolation/include/: interIDW.h  rangeConstructor.h
interpolation/pyDrawer/: altFile.txt  colorProject  drawer.py  src.txt
interpolation/src/: interIDW.cpp  rangeConstructor.cpp
lda/: CMakeLists.txt
lda/data/: class1.txt  class2.txt  data.csv  data.xlsx  data_after.csv
lda/pyDrawer/: case.py  drawer.py  learn.py  test.py
lda/src/: CMakeLists.txt  main.cpp  wave.cpp
lda/src/include/: lda.h
mono-camera/: CMakeLists.txt
mono-camera/src/: CMakeLists.txt  main.cpp
mono-camera/src/src/: camera.cpp
my-slam/: CMakeLists.txt
my-slam/doc/: process  system
my-slam/src/: CMakeLists.txt  main.cpp
my-slam/src/include/: ba.h  camera.h  frame.h  mappoint.h  myslam.h  orbfeature.h
my-slam/src/src/: camera.cpp  frame.cpp  mappoint.cpp  myslam.cpp  orbfeature.cpp
normal-fitting/: CMakeLists.txt  main.cpp  readme.md
normal-fitting/include/: normal_fitting.h
quaternions/: CMakeLists.txt  main.cpp  readme.md
quaternions/include/: quaternion.h
quaternions/src/: quaternion.cpp
slic/: CMakeLists.txt  readme.md
slic/include/: slic.h
slic/src/: slic.cpp
